lib/tools/orbit/test_output/runcore_test.output
Flow compiler (3rd generation)

Processing 'orbit' on http server

tests/runcore_test.orb: tests/runcore_test.orb:14:11: Parse error
let arr = [1, 2, 3, 4, 5];
          ^
